@@ -10,6 +10,7 @@ Version 1.0.6 (Januari xxth 2013)
 - Code should now compile also with VS2010 express
 - Code now compiles also with Debian (Mac OS)
 - Lighting 1, ARC Doorbell is now send with a 'Chime' instead of AllOn
+- P1 Smart Meter, Gas value now only send/update when the value is changing (once every 1 a 2 hours)
 
 Version 1.0.5 (December 29th 2012)
 - Start of History document
